CORE-8911: Fixing mobile issues in spacing on checkout login.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/cart/_checkout-login.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/cart/_checkout-login.scss
@@ -487,6 +487,13 @@
 }
 
 .alias--cart-checkout-login {
+  .user-page.checkout-login {
+    @include breakpoint($only-mobile) {
+      padding: 0.5rem 1.25rem;
+      margin-bottom: 3.25rem;
+    }
+  }
+
   .block-page-title-block {
     @include breakpoint($desktop) {
       margin-top: 0.75rem;
