--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/social-links/_social-auth.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/social-links/_social-auth.scss
@@ -227,6 +227,7 @@
 
       @include breakpoint($only-mobile) {
         width: 100%;
+        margin: 2px 0;
       }
     }
 
